# phd-comp6246

./: .gitignore
assessment/: comp6246-james-carlyle.ipynb  data-processing.py  human_activity_recognition.ipynb  main.ipynb  main.py  plot-summary.py  plot-walking.py  pyproject.toml  requirements.txt  statistical-analysis-s007.py
assessment/report/: main.tex
labs/: Lab5_NeuralNetworks.ipynb  Lab5_Solutions.ipynb  Lab6_RNNs_2025.ipynb  week4_intro_to_tensorflow.ipynb  week7_unsupervised_learning.ipynb
