[project]
name = "assessment-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "mo>=0.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
]
